# pydantic_agent

./: .gitignore  .justfile  README.md  pyproject.toml
src/pydantic_agent/: agent.py  cli.py
